--- a/online_shop/src/css/sellerAccount.css
+++ b/online_shop/src/css/sellerAccount.css
@@ -3,6 +3,8 @@
     display: flex;
     background-color: #fff;
     height: 100vh; /* Ensure it covers the full height of the viewport */
+    font-family: 'Yekan', serif;
+    font-weight: bolder;
   }
   
   .taskbar {
@@ -11,7 +13,7 @@
     right: 0;
     height: 100vh;
     width: 200px;
-    background-color: #fff;
+    background-color: blueviolet;
     border-left: 1px solid #e0e0e0;
     display: flex;
     flex-direction: column;
