--- a/online_shop/src/css/addProduct.css
+++ b/online_shop/src/css/addProduct.css
@@ -1,11 +1,12 @@
 .add-product-container {
-  max-width: 600px;
+  max-width: 700px;
   margin: 50px auto;
   padding: 40px;
   background-color: #f9f9f9;
   border: 1px solid #ddd;
   border-radius: 10px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  font-family: 'Yekan', serif;
 }
 
 .add-product-container h2 {
@@ -68,7 +69,7 @@ button:hover {
 .red-button:hover {
   background-color: #c21717;
 }
-
+/* 
 .background {
   position: fixed;
   top: 0;
@@ -78,7 +79,7 @@ button:hover {
   z-index: -1;
   background: linear-gradient(to bottom, #ccffff 0%, #99ccff 100%);
   animation: moveBackground 20s linear infinite;
-}
+} */
 
 @keyframes moveBackground {
   from {
