--- a/online_shop/src/css/mainPage.css
+++ b/online_shop/src/css/mainPage.css
@@ -237,7 +237,7 @@
   background-color: #f9f9f9;
   border-radius: 10px;
   margin: 20px;
-  height: 60vh; /* Adjust the height as needed */
+  height: 500px; /* Adjust the height as needed */
   overflow-y: auto; /* Enable vertical scrolling */
 }
 
@@ -289,4 +289,64 @@
   font-size: 0.9em;
   color: #777;
 }
+
+
+/* Product Card Styles */
+.product-item {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease-in-out;
+  text-align: center;
+}
+
+.product-item:hover {
+  transform: translateY(-5px);
+}
+
+.product-image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 15px;
+}
+
+.product-name {
+  font-size: 1.2em;
+  margin-bottom: 10px;
+  color: #333; /* Adjust text color */
+}
+
+.product-price {
+  font-size: 1.1em;
+  color: #4CAF50;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.product-description {
+  font-size: 0.9em;
+  color: #777;
+}
+
+.product-item button {
+  padding: 10px 20px;
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.product-item button:hover {
+  background-color: #45a049;
+}
+
+
+
+
+
 
