--- a/online_shop/src/css/mainPage.css
+++ b/online_shop/src/css/mainPage.css
@@ -185,8 +185,8 @@
   width: 100%;
   padding: 10px 15px;
   margin-bottom: 10px;
-  background-color: rgba(255, 255, 255, 0.1); /* Semi-transparent background */
-  color: white;
+  background-color: rgb(255, 255, 255); /* Semi-transparent background */
+  color: rgb(0, 0, 0);
   border: none;
   border-radius: 10px;
   cursor: pointer;
