--- a/online_shop/src/css/Cart.css
+++ b/online_shop/src/css/Cart.css
@@ -79,8 +79,9 @@
   background-color: #007bff;
   color: white;
   border: none;
-  padding: 5px 10px;
+  padding: 15px 20px;
   border-radius: 4px;
+  margin-left: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
 }
@@ -99,7 +100,7 @@
   background-color: #dc3545;
   color: white;
   border: none;
-  padding: 5px 10px;
+  padding: 15px 20px;
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s ease;
@@ -125,6 +126,7 @@
 
 .total-price {
   font-weight: bold;
+  font-size: larger;
   color: #007bff;
 }
 
