--- a/online_shop/src/css/Cart.css
+++ b/online_shop/src/css/Cart.css
@@ -63,7 +63,7 @@
   font-size: 16px;
 }
 
-.product-image {
+.product-image-cart {
   width: 50px;
   height: 50px;
   border-radius: 8px;
@@ -169,24 +169,24 @@
   transform: scale(1.05);
 }
 
-.product-image {
+.product-image-cart {
   width: 100%;
   height: auto;
   margin-bottom: 15px;
 }
 
-.product-name {
+.product-name-cart {
   font-size: 1.2em;
   margin-bottom: 10px;
 }
 
-.product-price {
+.product-price-cart {
   font-size: 1em;
   color: #4CAF50;
   margin-bottom: 10px;
 }
 
-.product-description {
+.product-description-cart {
   font-size: 0.9em;
   color: #777;
 }
