--- a/online_shop/src/css/mainPage.css
+++ b/online_shop/src/css/mainPage.css
@@ -267,20 +267,22 @@
 }
 
 .product-image {
-  width: 100%;
-  height: 200px;
+  width: 15vw;
+  height: auto;
+  align-self: center;
   object-fit: cover;
   border-radius: 10px;
   margin-bottom: 15px;
 }
 
 .product-name {
+  text-align: center;
   font-size: 1.2em;
   margin-bottom: 10px;
 }
 
 .product-price {
-  font-size: 1.1em;
+  font-size: larger;
   color: #4CAF50;
   margin-bottom: 10px;
   font-weight: bold;
@@ -296,6 +298,7 @@
 .product-item {
   background-color: white;
   padding: 20px;
+  align-items: center;
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out;
@@ -306,31 +309,6 @@
   transform: translateY(-5px);
 }
 
-.product-image {
-  width: 100%;
-  height: 200px;
-  object-fit: cover;
-  border-radius: 10px;
-  margin-bottom: 15px;
-}
-
-.product-name {
-  font-size: 1.2em;
-  margin-bottom: 10px;
-  color: #333; /* Adjust text color */
-}
-
-.product-price {
-  font-size: 1.1em;
-  color: #4CAF50;
-  margin-bottom: 10px;
-  font-weight: bold;
-}
-
-.product-description {
-  font-size: 0.9em;
-  color: #777;
-}
 
 .product-item button {
   padding: 10px 20px;
@@ -346,23 +324,17 @@
   background-color: #45a049;
 }
 
-.star {
-  font-size: 20px;
-  color: gold;
-  margin-right: 2px;
+.product-rating{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
 }
 
-.star.full {
-  color: gold;
+.product-point{
+  font-size: larger;
+  color: darkgoldenrod;
 }
-
-.star.half {
-  color: gold;
+.product-discount{
+  font-size: x-large;
+ color: red;
 }
-
-.star.empty {
-  color: lightgray;
-}
-
-
 
