--- a/online_shop/src/css/mainPage.css
+++ b/online_shop/src/css/mainPage.css
@@ -1,6 +1,7 @@
 .main-page {
   position: relative;
   min-height: 100vh; /* Ensure the page takes full height */
+  background-color: cyan;
 }
 
 .header {
@@ -249,35 +250,20 @@
 
 .product-list {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(5,1fr);
   gap: 20px;
 }
 
-.product-card {
-  background-color: white;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  text-align: center;
-  transition: transform 0.3s ease-in-out;
-}
-
-.product-card:hover {
-  transform: translateY(-5px);
-}
-
 .product-image {
-  width: 15vw;
+  width: 100%;
   height: auto;
-  align-self: center;
-  object-fit: cover;
   border-radius: 10px;
   margin-bottom: 15px;
 }
 
 .product-name {
   text-align: center;
-  font-size: 1.2em;
+  font-size: larger;
   margin-bottom: 10px;
 }
 
@@ -288,17 +274,12 @@
   font-weight: bold;
 }
 
-.product-description {
-  font-size: 0.9em;
-  color: #777;
-}
 
 
-/* Product Card Styles */
+
 .product-item {
-  background-color: white;
+  background-color: black;
   padding: 20px;
-  align-items: center;
   border-radius: 10px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease-in-out;
@@ -310,19 +291,6 @@
 }
 
 
-.product-item button {
-  padding: 10px 20px;
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  border-radius: 20px;
-  cursor: pointer;
-  transition: background-color 0.3s ease-in-out;
-}
-
-.product-item button:hover {
-  background-color: #45a049;
-}
 
 .product-rating{
   display: grid;
@@ -337,4 +305,3 @@
   font-size: x-large;
  color: red;
 }
-
