--- a/online_shop/src/css/Cart.css
+++ b/online_shop/src/css/Cart.css
@@ -3,25 +3,25 @@
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: aqua;
+  background-color: azure;
   padding: 20px;
 }
 
 .cart-panel {
   background-color: rgba(255, 255, 255, 0.9); 
   border-radius: 16px;
-  box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.1);
   padding: 30px;
-  max-width: 800px;
+  max-width: 900px;
   width: 100%;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   backdrop-filter: blur(10px); 
+  box-shadow: 0px 12px 24px rgba(0, 0, 0, 0.2);
 }
 
 
 .cart-panel:hover {
   transform: translateY(-5px);
-  box-shadow: 0px 12px 24px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 12px 24px rgba(0, 0, 0, 0.5);
 }
 
 .cart-items {
@@ -44,7 +44,7 @@
 }
 
 .cart-item:hover {
-  background-color: #f8f9fa;
+  background-color: aliceblue;
 }
 
 .item-info {
@@ -56,6 +56,7 @@
   font-weight: bold;
   color: #333;
   margin-left: 15px;
+  padding: 10px;
 }
 
 .item-price {
@@ -64,8 +65,8 @@
 }
 
 .product-image-cart {
-  width: 70px;
-  height: 70px;
+  width: 150px;
+  height: auto;
   border-radius: 50%;
   object-fit: cover;
   margin-right: 20px;
