--- a/online_shop/src/css/showProduct.css
+++ b/online_shop/src/css/showProduct.css
@@ -2,12 +2,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: aqua;
+    background-color: #fff;
     font-family: 'Yekan', serif;
 }
 
 .show-product-card {
-    background: linear-gradient(45deg, #fe41c5, #c549ac);
+    /* background: linear-gradient(45deg, #fe41c5, #c549ac); */
     border-radius: 15px;
     padding: 30px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
@@ -23,7 +23,7 @@
     font-size: 45px;
     font-weight: bolder;
     margin-bottom: 20px;
-    color: #fff;
+    color: black;
 }
 
 .show-product-image {
@@ -51,7 +51,7 @@
 .show-product-price {
     font-size: 30px;
     font-weight: bolder;
-    color: #fff;
+    color: black;
     margin-right: 10px;
     margin-bottom: 50px;
 }
@@ -64,7 +64,7 @@
 .show-product-description {
     font-size: 30px;
     margin-bottom: 20px;
-    color: #fff;
+    color: black;
     margin-bottom: 50px;
 }
 
@@ -75,7 +75,7 @@
     font-size: 30px;
     font-weight: bolder;
     border-radius: 15px;
-    background-color: #e19fce;
+    background-color: #eaeaea;
     padding: 5px 0 10px 0;
 }
 
@@ -120,13 +120,13 @@
 /* Add these styles at the end of the CSS file */
 
 .rating-options label.selected {
-    background-color: #ffd700;
+    background-color: #20f0ff;
 }
 
 .rating-options label {
     margin: 0 10px;
     font-size: 24px;
-    color: #fff;
+    color: #c3b609;
     cursor: pointer;
     transition: transform 0.3s ease-in-out;
 }
@@ -158,4 +158,13 @@
     cursor: pointer;
     transition: background-color 0.3s ease;
     margin-bottom: 30px;
+}
+
+.quantity-btn-cart{
+    margin-left: 10px;
+}
+
+.remove-btn-cart{
+    width: 200px;
+    background-color: red;
 }
