--- a/online_shop/src/css/PaymentForm.css
+++ b/online_shop/src/css/PaymentForm.css
@@ -1,24 +1,32 @@
 /* src/css/PaymentForm.css */
 .payment-form {
-    max-width: 400px;
+    max-width: 700px;
     margin: 0 auto;
     padding: 30px;
     border: 1px solid #ddd;
     border-radius: 8px;
     background-color: #f9f9f9;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-top: 10px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+  }
+  .payment-form:hover{
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
   }
   
   .payment-header {
     margin-bottom: 20px;
     font-size: 24px;
-    color: #333;
+    color: #0056b3;
     text-align: center;
   }
   
   .form-group {
     margin-bottom: 20px;
     border-radius: 20px;
+  }
+
+  .cvv2-section{
+    width: 25%;
   }
   
   .form-label {
@@ -29,21 +37,27 @@
   }
   
   .form-input {
-    width: 100%;
     padding: 12px 15px;
     box-sizing: border-box;
     border: 1px solid #ddd;
     border-radius: 10px;
     background-color: #ffffff;
     transition: border-color 0.3s;
+    font-size: 100px;
   }
+
   
-  .form-input:focus {
+  .form-input:focus{
     border-color: #007bff;
     outline: none;
   }
   
+  .hide-label{
+    color: white;
+   }
+
   .expiry-group {
+    width: 50%;
     display: flex;
     justify-content: space-between;
   }
@@ -57,6 +71,7 @@
     display: flex;
     align-items: center;
     border-radius: 30px;
+    width: 50%;
 
   }
   
@@ -98,7 +113,7 @@
   .payment-status {
     margin-top: 20px;
     font-weight: bold;
-    color: green;
-    text-align: center;
+    color: red;
+    text-align: right;
   }
   
