--- a/online_shop/src/css/mainPage.css
+++ b/online_shop/src/css/mainPage.css
@@ -55,7 +55,7 @@
   width: 300px;
 }
 
-.search-icon {
+.search-icon-main {
   background-color: #4CAF50;
   color: white;
   border: none;
@@ -113,7 +113,6 @@
   cursor: pointer;
   transition: background-color 0.3s ease-in-out, transform 0.2s ease-in-out;
   margin-right: 30px; /* Added to create spacing between buttons */
- 
 }
 
 .top-taskbar label{
@@ -122,7 +121,7 @@
   font-size: large;
   font-weight: bolder;
 }
-
+/* 
 .top-taskbar button:hover {
   background-color: #ffffff;
   color: #000000;
@@ -134,7 +133,7 @@
   margin-right: 10px;
   width: 30px;
   height: auto;
-}
+} */
 
 .bottom-left-button {
   position: absolute;
@@ -300,16 +299,27 @@
 
 
 
-.product-rating{
-  display: grid;
-  grid-template-columns: repeat(2,1fr);
+.product-rating {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
 
-.product-point{
-  font-size: larger;
-  color: darkgoldenrod;
+
+.product-point {
+  background-color: #ffde59;
+  padding: 5px 10px;
+  border-radius: 20px;
+  font-size: 0.9em;
+  font-weight: bold;
+  color: #333;
 }
-.product-discount{
-  font-size: x-large;
- color: red;
+
+.product-discount {
+  background-color: #ff6b6b;
+  padding: 5px 10px;
+  border-radius: 20px;
+  font-size: 0.9em;
+  font-weight: bold;
+  color: #fff;
 }
