--- a/online_shop/src/css/productDisplay.css
+++ b/online_shop/src/css/productDisplay.css
@@ -1,18 +1,19 @@
-.product-panel {
+.product-panel-disply {
   background-color: #f4f4f4;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   font-family: 'Yekan', serif;
+  height: 100%;
 }
 
-.product-list {
+.product-list-disply {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  grid-template-columns: repeat(5,1fr);
   gap: 20px;
 }
 
-.product-item {
+.product-item-disply {
   background-color: #fff;
   padding: 20px;
   border: 1px solid #eee;
@@ -21,12 +22,12 @@
   transition: transform 0.3s, box-shadow 0.3s;
 }
 
-.product-item:hover {
+.product-item-disply:hover {
   transform: translateY(-5px);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 }
 
-.product-image {
+.product-image-disply {
   max-width: 100%;
   height: auto;
   border-radius: 5px;
@@ -37,12 +38,6 @@
   font-size: 1.1em;
   font-weight: bold;
   color: #333;
-  margin-bottom: 10px;
-}
-
-.product-rating {
-  display: flex;
-  justify-content: space-between;
   margin-bottom: 10px;
 }
 
@@ -71,21 +66,20 @@
   margin-bottom: 15px;
 }
 
-button {
+.button-disply {
   background-color: #007bff;
   color: white;
   border: none;
   border-radius: 5px;
-  padding: 5px 10px; /* Adjusted padding for smaller buttons */
-  font-size: 0.8em; /* Adjusted font size for smaller buttons */
+  padding: 4px 10px; 
+  font-size: 1em; 
   cursor: pointer;
+  margin-left: 20px;
+  margin-right: 5px;
   transition: background-color 0.3s;
 }
 
-button:hover {
+button-disply:hover {
   background-color: #0056b3;
 }
 
-button + button {
-  margin-left: 10px;
-}
