--- a/online_shop/src/css/changeProduct.css
+++ b/online_shop/src/css/changeProduct.css
@@ -46,8 +46,8 @@
 
 .form-group img.current-image,
 .form-group img.new-image {
-  width: 100px;
-  height: 100px;
+  width: 200px;
+  height: auto;
   object-fit: cover;
   display: block;
   margin-top: 10px;
@@ -77,3 +77,9 @@
   font-size: 14px;
   cursor: pointer;
 } */
+
+.remove-feature{
+  background-color: red;
+  padding: 5px;
+  font-size: small;
+}
