--- a/online_shop/src/css/productDisplay.css
+++ b/online_shop/src/css/productDisplay.css
@@ -79,6 +79,13 @@
   transition: background-color 0.3s;
 }
 
+.button-disply2{
+  background-color: green;
+  margin: 5px 60px 0 0;
+  padding: 10px;
+  border-radius: 50px;
+}
+
 button-disply:hover {
   background-color: #0056b3;
 }
