--- a/online_shop/src/css/Profile.css
+++ b/online_shop/src/css/Profile.css
@@ -54,3 +54,7 @@
   background-color: #0056b3;
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
 }
+
+#usename-profile{
+   text-transform: uppercase;
+}
