--- a/online_shop/src/css/mainPage.css
+++ b/online_shop/src/css/mainPage.css
@@ -2,6 +2,7 @@
   position: relative;
   min-height: 100vh; /* Ensure the page takes full height */
   background-color: ghostwhite;
+  overflow-x: hidden;
 }
 
 .header {
@@ -88,7 +89,7 @@
 }
 
 .top-taskbar {
-  position: fixed; /* Keep it fixed to the top */
+  position: relative; /* Keep it fixed to the top */
   top: 15.6%;
   width: calc(100% + 20px); /* Increase the width to account for the left shift */
   height: 40px; /* Adjust as needed */
@@ -136,7 +137,7 @@
 } */
 
 .bottom-left-button {
-  position: absolute;
+  position: fixed;
   bottom: 20px;
   left: 20px;
   padding: 10px 20px;
@@ -241,12 +242,13 @@
 
 
 .product-panel {
+  height: 2000px;
   padding: 20px;
   background-color: #f9f9f9;
   border-radius: 10px;
   margin: 20px;
   height: 500px; /* Adjust the height as needed */
-  overflow-y: auto; /* Enable vertical scrolling */
+ /* Enable vertical scrolling */
 }
 
 .product-panel h2 {
@@ -256,7 +258,7 @@
 
 .product-list {
   display: grid;
-  grid-template-columns: repeat(5,1fr);
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 20px;
 }
 
