--- a/online_shop/src/css/showProduct.css
+++ b/online_shop/src/css/showProduct.css
@@ -35,15 +35,15 @@
     height: auto;
     border-radius: 15px;
     margin-bottom: 20px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 3);
     cursor: pointer;
     transition: transform 0.3s ease-in-out;
 }
 
-.show-product-image.enlarged {
-    transform: scale(1.5);
+.show-product-image:hover {
+    transition: transform 1s ease-in-out;
+    transform: scale(1.5) translateX(-10px);
 }
-
 
 .price-rating {
     display: flex;
@@ -66,10 +66,12 @@
 }
 
 .show-product-description {
-    width: 80%;
+    width: 90%;
+    white-space:  pre-wrap;
     margin: 50px 10% 50px 0 ;
-    font-size: 30px;
+    font-size: 20px;
     color: black;
+    text-align: right;
 }
 
 .product-odd-information {
@@ -190,7 +192,7 @@
 }
 
 .comments-list{
-    margin-top: 100px;
+    margin: 100px 5% 0 10%;
 }
 
 .comment-show{
